# Endless-Sky-Mission-Builder

./: .gitignore  AggregatedComponentFrame.py  AggregatedTriggerFrame.py  CMakeLists.txt  CONTRIBUTING.md  Components.py  ESMB.py  GUI.py  Mission.py  MissionCompiler.py  MissionComponents.py  MissionFileParser.py  PopupWindow.py  README.md  ScrollingCenterFrame.py  TriggerWindow.py  appveyor.yml  defaultMission.txt  exampleMission.txt  guiutils.py  icon.icns  menuactions.py  popupWindow.py  setup.py  sonar-project.properties  style_guide.md
src/: AggregatedTriggerFrame.py  CMakeLists.txt  ESMB.py  GUI.py  Mission.py  PopupWindow.py  __init__.py  config.py  esmbapplication.cpp  esmbapplication.h  guiutils.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuactions.py
src/data/: tooltips.json
src/esjsonlib/: CMakeLists.txt
src/esjsonlib/common/: datafileparser.cpp  datafileparser.h  fileitem.cpp  fileitem.h  fileitemparser.cpp  fileitemparser.h  fileitemparserimpl.cpp  fileitemparserimpl.h  fileitemparserutils.cpp  fileitemparserutils.h
src/esjsonlib/event/: fileeventitemparser.cpp  fileeventitemparser.h  itemevent.cpp  itemevent.h
src/esjsonlib/filter/: filefilteritemparser.cpp  filefilteritemparser.h  filefilteritemparserutil.cpp  filefilteritemparserutil.h  itemfilter.cpp  itemfilter.h
src/esjsonlib/fleet/: filefleetitemparser.cpp  filefleetitemparser.h  filefleetitemparserutil.cpp  filefleetitemparserutil.h  itemfleet.cpp  itemfleet.h
src/esjsonlib/government/: filegovernmentitemparser.cpp  filegovernmentitemparser.h  itemgovernment.cpp  itemgovernment.h
src/esjsonlib/mission/: filemissionitemparser.cpp  filemissionitemparser.h  filemissionitemparserutil.cpp  filemissionitemparserutil.h  itemmission.h
src/esjsonlib/model/: itemphrase.cpp  itemship.cpp
src/esjsonlib/parsers/: datafileparser.h  filemissionitemparser.h  filephraseitemparser.cpp  filephraseitemparser.h  filesubstitutionsitemparser.cpp  filesubstitutionsitemparser.h
src/esjsonlib/personality/: filepersonalityitemparser.cpp  filepersonalityitemparser.h  itempersonality.cpp  itempersonality.h
src/esjsonlib/phrase/: filephraseitemparser.cpp  filephraseitemparser.h  filephraseitemparserutil.cpp  filephraseitemparserutil.h  itemphrase.cpp  itemphrase.h
src/esjsonlib/ship/: itemship.h
src/esjsonlib/substitutions/: filesubstitutionsitemparser.cpp  filesubstitutionsitemparser.h  filesubstitutionsitemparserutil.cpp  filesubstitutionsitemparserutil.h  itemsubstitutions.cpp  itemsubstitutions.h
src/esmb/: CMakeLists.txt  esmb.pro  esmbapplication.cpp  esmbapplication.h  event.cpp  event.h  fileitem.cpp  fileitem.h  fileitemregex.h  itemevent.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/esmb/model/: fileitem.cpp  fileitem.h  itemevent.cpp  itemevent.h  itemgovernment.cpp  itemgovernment.h  itemmission.cpp  itemmission.h  itemphrase.cpp  itemphrase.h  itemship.cpp  itemship.h
src/esmb/parsers/: datafileparser.cpp  datafileparser.h  (+4 more)
src/esmbwidgets/: AggregatedTriggerFrame.py  ComboComponentFrame.py  ComponentMandOptFrame.py  PopupWindow.py  ScrollingCenterFrame.py  TypeSelectorWindow.py  __init__.py
src/gui/: GUI.py  __init__.py  guiutils.py
src/model/: FileItem.py  FileMissionItemParser.py  FileObject.py  Mission.py  MissionCompiler.py  MissionComponents.py  MissionFileObjects.py  MissionFileParser.py  MissionParser.py  TriggerParser.py  __init__.py  fileitem.cpp  fileitemconstants.h  itemevent.cpp  itemmission.cpp  itemmission.h  itemphrase.cpp  itemphrase.h  itemship.cpp  itemsubstitution.cpp  itemsubstitution.h  itemsubstitutions.cpp  itemsubstitutions.h
src/parsers/: datafileparser.cpp  datafileparser.h  fileitemparser.cpp  fileitemparser.h  filemissionitemparser.cpp  filemissionitemparser.h  filephraseitemparser.cpp  filesubstitutionitemparser.cpp  filesubstitutionitemparser.h  filesubstitutionsitemparser.cpp  filesubstitutionsitemparser.h
src/singletons/: MissionFileItems.py  MissionFileObjects.py  __init__.py
src/utils/: __init__.py  compilemission.py  es_wiki.py  helpuser.py  loadtooltips.py  menuactions.py  newmission.py  openfile.py  savefile.py
src/widgets/: AggregatedComponentMandOptFrame.py  AggregatedDialogFrame.py  AggregatedEditorFrame.py  AggregatedLogFrame.py  AggregatedSimpleEditorFrame.py  AggregatedTriggerConditionFrame.py  AggregatedTriggerFrame.py  AggregatorFrame.py  ComboComponentFrame.py  ComponentMandOptFrame.py  DefaultTextEntry.py  DialogEntry.py  DialogFrame.py  EditorFrame.py  LogFrame.py  LogWindow.py  MultiOptionFrame.py  NewMissionPopup.py  OptionFrame.py  PopupWindow.py  ScrollingFrame.py  SimpleEditorFrame.py  Tooltip.py  TooltipLabel.py  TriggerConditionFrame.py  TriggerConditionWindow.py  TriggerFrame.py  TriggerWindow.py  TypeSelectorWindow.py  __init__.py
test/: CMakeLists.txt  CMakeLists.txt.txt  main.cpp
test/parsers/: fileitemparser_tests.cpp  filemissionitemparser_tests.cpp  filemissionitemparser_tests.h  filesubstitutionsitemparser_tests.cpp  filesubstitutionsitemparser_tests.h
test/testing/: tst_testcasename.h
tests/: CMakeLists.txt  main.cpp
tests/common/: fileitemparser_tests.cpp  fileitemparser_tests.h
tests/event/: fileeventitemparser_tests.cpp  fileeventitemparser_tests.h
tests/filter/: filefilteritemparser_tests.cpp  filefilteritemparser_tests.h
tests/fleet/: filefleetitemparser_tests.cpp  filefleetitemparser_tests.h
tests/government/: filegovernmentitemparser_tests.cpp  filegovernmentitemparser_tests.h
tests/mission/: filemissionitemparser_tests.cpp  filemissionitemparser_tests.h
tests/parsers/: fileitemparser_tests.h  filemissionitemparser_tests.cpp  filemissionitemparser_tests.h  filephraseitemparser_tests.cpp  filephraseitemparser_tests.h  filesubstitutionsitemparser_tests.cpp  filesubstitutionsitemparser_tests.h
tests/personality/: filepersonalityitemparser_tests.cpp  filepersonalityitemparser_tests.h
tests/phrase/: filephraseitemparser_tests.cpp  filephraseitemparser_tests.h
tests/substitutions/: filesubstitutionsitemparser_tests.h
tests/testing/: CMakeLists.txt
(+84 files in other folders)
